--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: Speeches-of-the-Hon-Jefferson-Davis-of-Mississippi-delivered-during-the-summer-of-1858_5205
+_version: 0.1.0
 creator:
   author:
     agent_name: Davis, Jefferson
