--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Speeches-of-the-Hon-Jefferson-Davis-of-Mississippi-delivered-during-the-summer-of-1858_5205
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Davis, Jefferson
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1741
     wikipedia: http://en.wikipedia.org/wiki/Jefferson_Davis
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5205#Speeches-of-the-Hon-Jefferson-Davis-of-Mississippi-delivered-during-the-summer-of-1858
 gutenberg_issued: '2004-03-01'
 gutenberg_type: Text
 identifiers:
