--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Speeches-of-the-Hon-Jefferson-Davis-of-Mississippi-delivered-during-the-summer-of-1858_5205
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'United States -- Politics and government -- 1857-1861'
 - !lcsh 'Slavery -- United States'
 - !lcsh 'Slavery -- United States -- Speeches in Congress'
+- GITenberg
 title: Speeches of the Hon. Jefferson Davis, of Mississippi; delivered during the
   summer of 1858.
 url: http://www.gutenberg.org/ebooks/5205
